Use clearfix on seach widget instead of overflow: hidden to prevent issues when input is full-width

--- a/sass/components/_widgets.scss
+++ b/sass/components/_widgets.scss
@@ -48,7 +48,7 @@
 
 /* Search Form */
 .search-form {
-	overflow: hidden;
+	@include clearfix;
 }
 
 .search-field {
